--- a/app/src/main/res/layout/fragment_compose_tweet.xml
+++ b/app/src/main/res/layout/fragment_compose_tweet.xml
@@ -17,6 +17,7 @@
         android:cursorVisible="true"
         android:textColor="@color/colorAccent"
         android:textSize="22sp"
+        android:maxLength="140"
         android:hint="@string/ask_a_question"
         android:gravity="top|left"
         android:layout_above="@+id/button_send_tweet"
@@ -37,6 +38,7 @@
         android:fontFamily="Arial"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
+        android:layout_marginRight="6dp"
         android:layout_centerHorizontal="true"
         />
 
