--- a/app/src/main/res/layout/image_tweet_feed_item.xml
+++ b/app/src/main/res/layout/image_tweet_feed_item.xml
@@ -4,6 +4,7 @@
                 android:orientation="vertical"
                 android:layout_marginTop="12dp"
                 android:layout_marginLeft="12dp"
+                android:background="@android:color/white"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
     >
