--- a/app/src/main/res/layout/image_tweet_feed_item.xml
+++ b/app/src/main/res/layout/image_tweet_feed_item.xml
@@ -4,7 +4,9 @@
                 android:orientation="vertical"
                 android:layout_marginTop="12dp"
                 android:layout_marginLeft="12dp"
-                android:background="@android:color/white"
+                android:layout_marginRight="12dp"
+                android:background="@drawable/drawable_transparent_blue_border_round_corners"
+                android:padding="4dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
     >
@@ -17,15 +19,27 @@
 
     <TextView
         android:id="@+id/text_view_user_name"
-        android:layout_width="100dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/image_view_profile_photo"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="-4dp"
+        android:maxLines="1"
         android:textStyle="bold"
         android:textSize="16sp"
         android:layout_alignTop="@id/image_view_profile_photo"
         tools:text="Yoav Gray"
+        />
+
+    <TextView
+        android:id="@+id/text_view_when_published"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_marginLeft="4dp"
+        android:textSize="14sp"
+        android:layout_alignTop="@id/image_view_profile_photo"
+        tools:text="19h"
         />
 
     <TextView
@@ -36,20 +50,11 @@
         android:layout_marginLeft="8dp"
         android:textColor="@android:color/darker_gray"
         android:textSize="14sp"
-        android:layout_alignTop="@id/text_view_user_name"
+        android:maxLines="1"
+        android:ellipsize="end"
+        android:layout_alignTop="@id/image_view_profile_photo"
+        android:layout_toLeftOf="@id/text_view_when_published"
         tools:text="\@yoavibavi"
-        />
-
-    <TextView
-        android:id="@+id/text_view_when_published"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_marginLeft="4dp"
-        android:textColor="@android:color/darker_gray"
-        android:textSize="14sp"
-        android:layout_alignTop="@id/text_view_user_nickname"
-        tools:text="19h"
         />
 
     <TextView
@@ -59,8 +64,10 @@
         android:layout_below="@id/text_view_user_name"
         android:layout_alignLeft="@id/text_view_user_name"
         android:layout_marginTop="4dp"
+        android:textColor="@android:color/black"
+        android:fontFamily="monospace"
         android:textStyle="bold"
-        android:textSize="16sp"
+        android:textSize="14sp"
         tools:text="look what I got to say!!!"
         />
 </RelativeLayout>
