--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -60,8 +60,12 @@
         <RelativeLayout
             android:id="@+id/relative_layout_loading_tweets"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_height="40dp"
+            android:layout_gravity="center_horizontal"
+            app:layout_anchor="@id/swipe_refresh_container"
+            app:layout_anchorGravity="bottom|right|end"
+            android:visibility="gone"
+            tools:visibility="visible"
             android:background="@android:color/white"
             >
 
