--- a/app/src/main/res/layout/fragment_tweet_details.xml
+++ b/app/src/main/res/layout/fragment_tweet_details.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:paddingBottom="30dp"
             android:layout_height="match_parent"
             android:layout_width="match_parent">
@@ -82,6 +81,7 @@
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:layout_marginTop="10dp"
+            android:maxHeight="300dp"
             android:layout_below="@id/text_view_tweet_body"
             android:layout_alignLeft="@id/text_view_tweet_body"
             android:visibility="gone"
