--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -55,24 +55,39 @@
         tools:text="\@yoavgray"
         />
 
-    <RelativeLayout
-        android:layout_width="200dp"
+    <View
+        android:id="@+id/profile_vertical_separator"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_margin="8dp"
+        android:background="@android:color/white"
+        android:layout_below="@id/text_view_user_screen_name"/>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view_profile_tweets"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:layout_marginRight="12dp"
-        android:layout_alignTop="@+id/text_view_user_name"
-        android:layout_alignParentRight="true"
+        />
+
+    <RelativeLayout
+        android:layout_width="174dp"
+        android:layout_height="wrap_content"
         android:background="@drawable/drawable_transparent_background_white_border"
+        android:layout_alignBaseline="@+id/text_view_user_name"
+        android:layout_alignBottom="@+id/text_view_user_name"
+        android:layout_alignRight="@+id/profile_vertical_separator"
+        android:layout_alignEnd="@+id/profile_vertical_separator"
         >
 
         <TextView
             android:id="@+id/text_view_profile_followers_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="18sp"
+            android:textSize="16sp"
             android:textColor="@android:color/white"
             android:textStyle="bold|italic"
             android:fontFamily="raleway"
+            android:layout_marginTop="2dp"
             android:layout_marginRight="12dp"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
@@ -94,10 +109,11 @@
             android:id="@+id/text_view_profile_following_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="18sp"
+            android:textSize="16sp"
             android:textColor="@android:color/white"
             android:textStyle="bold|italic"
             android:fontFamily="raleway"
+            android:layout_marginTop="2dp"
             android:layout_alignParentTop="true"
             android:layout_toLeftOf="@id/text_view_profile_followers_label"
             android:layout_marginRight="8dp"
@@ -115,19 +131,5 @@
             />
 
     </RelativeLayout>
-
-    <View
-        android:id="@+id/profile_vertical_separator"
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:layout_margin="8dp"
-        android:background="@android:color/white"
-        android:layout_below="@id/text_view_user_screen_name"/>
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view_profile_tweets"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
 
 </RelativeLayout>
